# diagnostic_recorder

./: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml
cmake/: FindMongoDB.cmake
include/diagnostic_recorder/: analyzer_recorder_group.h  base_recorder.h  generic_analyzer_recorder.h  storage.h
include/diagnostic_recorder/storages/: filesystem_storage.h  mongodb_storage.h
src/: analyzer_recorder_group.cpp  base_recorder.cpp  generic_analyzer_recorder.cpp
src/storages/: filesystem_storage.cpp  mongodb_storage.cpp
