<?xml version="1.0"?>
<package format="2">
  <name>diagnostic_recorder</name>
  <version>0.2.0</version>
  <description>
    Provides diagnostic analyzers with built-in recorders.
  </description>
  <author email="patrick@dfautomation.com">Patrick Chin</author>
  <maintainer email="patrick@dfautomation.com">Patrick Chin</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/dfautomation/diagnostic_recorder</url>
  <url type="bugtracker">http://github.com/dfautomation/diagnostic_recorder/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>libmongoclient-dev</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <test_depend>roslint</test_depend>

  <export>
    <diagnostic_aggregator plugin="${prefix}/plugin.xml"/>
  </export>
</package>
